[refactor] Update .section-testimonials grid to fix spacing

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -307,6 +307,9 @@
 
 .section-testimonials {
   background-color: #fdf2e9;
+  display: grid;
+  grid-template-columns: 55fr 45fr;
+  align-items: center;
 }
 
 .testimonials-container {
